--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@socket.io/redis-adapter": "^8.3.0",
     "async-lock": "^1.4.1",
-    "axios": "^1.7.9",
+    "axios": "1.8.2",
     "date-and-time": "^3.4.0",
     "dotenv": "^16.4.7",
     "ioredis": "^5.5.0",
